# aizen

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: aizen-dashboard-ci.yml
aizen-core/: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  SECURITY.md  SIGNAL.md  build.zig  build.zig.zon  config.example.json  docker-compose.signal.yml  docker-compose.yml
aizen-core/docs/: README.md  build-profiles.md  integration-analysis.md  integration-roadmap.md
aizen-core/scripts/: provider-smoke-musl.sh  provider-smoke.sh
aizen-core/spec/: webchannel_v1.json
aizen-core/src/: a2a.zig  agent_bindings_config.zig  agent_runner.zig  auth.zig  channel_loop.zig  channel_manager.zig  channel_probe.zig  config.zig  config_mutator.zig  config_parse.zig  config_paths.zig  config_types.zig  (+28 more)
aizen-dashboard/: Dockerfile  README.md  RELEASING.md  build.zig  build.zig.zon
aizen-kanban/: AGENTS.md  Dockerfile  README.md  build.zig  build.zig.zon
aizen-orchestrate/: CLAUDE.md  Dockerfile  README.md  build.zig  build.zig.zon  config.example.json  docker-compose.yml
aizen-skill-bridge/: pyproject.toml  requirements.txt
aizen-skill-bridge/aizen_skill_bridge/: __init__.py  cli.py  executor.py  loader.py  registry.py
aizen-skill-bridge/tests/: test_loader.py
aizen-watch/: .gitignore  README.md  build.zig  build.zig.zon
docker/: docker-compose.yml
docs/: README.md  architecture-design.md  done-vs-todo.md  gap-analysis.md  pm-spec.md  research-report.md  roadmap-current.md  task-list.md
scripts/: build-all.sh  rebrand.sh  smoke-test.sh
(+272 files in other folders)
